Added an excercise on vector magnitude

--- a/VectorVoyage.ipynb
+++ b/VectorVoyage.ipynb
@@ -100,9 +100,36 @@
    "id": "47421660-230e-477d-abff-290d1e5dc416",
    "metadata": {},
    "source": [
-    "This vector, 'vector_A', represents your displacement in both the x (east-west) and y (north-south) directions.\n",
-    "### Exercise: \n",
-    "Can you calcualte the "
+    "### Exercise: Calculating the Distance Traveled 🌍\n",
+    "\n",
+    "Now that you've created `vector_A`, which represents your journey of **30 km east** and **40 km north**, let's calculate the **distance traveled**.\n",
+    "\n",
+    "Remember, the **distance traveled** is the same as the **magnitude** of the displacement vector, `vector_A`.\n",
+    "\n",
+    "#### Steps to Follow:\n",
+    "\n",
+    "1. **Recall the Vector**: `vector_A` is given as `[30, 40]`, where 30 km is the distance traveled east (along the x-axis), and 40 km is the distance traveled north (along the y-axis).\n",
+    "\n",
+    "2. **Visualize the Journey**: Imagine this journey as forming a right triangle on a grid:\n",
+    "   - The horizontal leg represents 30 km east.\n",
+    "   - The vertical leg represents 40 km north.\n",
+    "   - The hypotenuse of this triangle is the straight-line distance from your starting point to your final position, which is the magnitude of the vector.\n",
+    "\n",
+    "   **Tip:** Draw this triangle on a piece of paper to visualize how the journey and the distance traveled relate to each other.\n",
+    "\n",
+    "3. **Calculate the Magnitude Using the Pythagorean Theorem**:\n",
+    "   The Pythagorean theorem tells us that for any right triangle, the square of the hypotenuse (the side opposite the right angle) is equal to the sum of the squares of the other two sides. For your vector:\n",
+    "\n",
+    "$\n",
+    "   \\text{Magnitude} = \\sqrt{x^2 + y^2}\n",
+    "$\n",
+    "   \n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>"
    ]
   },
   {
