finishing the exercise

--- a/VectorVoyage.ipynb
+++ b/VectorVoyage.ipynb
@@ -133,9 +133,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8730c871-1aec-44a6-9cc8-89cdca15ebb8",
+   "metadata": {},
+   "source": [
+    "### Exercise: Calculating the Magnitude of Vector A Using Online Resources 🌐\n",
+    "\n",
+    "So far, we've learned that the **distance traveled** is the same as the **magnitude** of the displacement vector, `vector_A`. You’ve also seen how to calculate this using the Pythagorean theorem:\n",
+    "\n",
+    "$\n",
+    "\\text{Magnitude} = \\sqrt{x^2 + y^2}\n",
+    "$\n",
+    "\n",
+    "Now, let’s take it a step further and use Python to calculate this magnitude. But instead of directly providing the code, we challenge you to use online resources to find the solution.\n",
+    "\n",
+    "#### Task:\n",
+    "\n",
+    "1. **Search Online**: Use search engines, Python documentation, or educational platforms to learn how to calculate the magnitude of a vector in Python.\n",
+    "   - Keywords you might search for include: \"Python vector magnitude\", \"calculate magnitude numpy\", or \"Python Pythagorean theorem\".\n",
+    "   \n",
+    "2. **Use Python**: Based on what you find, write a Python snippet to calculate the magnitude of `vector_A`:\n",
+    "\n",
+    "```python\n",
+    "# Given vector_A\n",
+    "vector_A = np.array([30, 40])\n",
+    "\n",
+    "# Your code here to calculate the magnitude using what you've learned\n",
+    "magnitude_A = # (use your findings here)\n",
+    "\n",
+    "print(\"Magnitude of Vector A:\", magnitude_A)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "f52618a9-1370-4e24-a889-11e54bf780a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code goes here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29c2f7f1-f956-4e5e-a75d-c9e624386ddb",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea7374b1-80d8-473c-bc7c-62beec8ccac4",
+   "id": "64165324-a2cc-407d-97ed-7ff941710609",
    "metadata": {},
    "outputs": [],
    "source": []
