Representing Vectors by Magnitude and Angle

--- a/VectorVoyage.ipynb
+++ b/VectorVoyage.ipynb
@@ -178,7 +178,59 @@
    "cell_type": "markdown",
    "id": "29c2f7f1-f956-4e5e-a75d-c9e624386ddb",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Representing Vectors by Magnitude and Angle 🎯\n",
+    "\n",
+    "So far, we've represented vectors using their components along the x and y axes (e.g., `vector_A = [30, 40]`). However, vectors can also be represented by their **magnitude** and **direction** (or angle) relative to a reference axis, usually the x-axis.\n",
+    "\n",
+    "#### Why Represent Vectors This Way?\n",
+    "\n",
+    "- **Magnitude** tells us how long the vector is—essentially, the total distance it represents.\n",
+    "- **Angle** tells us the direction in which the vector points, measured counterclockwise from the positive x-axis.\n",
+    "\n",
+    "This representation is particularly useful when dealing with polar coordinates or when you need to rotate vectors.\n",
+    "\n",
+    "#### How to Calculate the Angle\n",
+    "\n",
+    "The angle \\( \\theta \\) of a vector can be calculated using the arctangent function:\n",
+    "\n",
+    "$\n",
+    "\\theta = \\tan^{-1}\\left(\\frac{y}{x}\\right)\n",
+    "$\n",
+    "\n",
+    "In Python, you can calculate this using the `numpy` function `np.arctan2(y, x)`, which automatically handles the correct quadrant for the angle.\n",
+    "\n",
+    "### Exercise: Calculate the Magnitude and Angle of `vector_A`\n",
+    "\n",
+    "Let's now apply this concept to `vector_A`, which is given as `[30, 40]`.\n",
+    "\n",
+    "1. **Magnitude**: You’ve already learned how to calculate the magnitude of a vector.\n",
+    "2. **Angle**: Use the `np.arctan2` function to calculate the angle in radians.\n",
+    "\n",
+    "#### Your Task:\n",
+    "\n",
+    "1. Write Python code to calculate both the magnitude and the angle (in degrees) for `vector_A`.\n",
+    "   \n",
+    "   - To convert radians to degrees, use `np.degrees(angle_in_radians)`.\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "\n",
+    "# Given vector_A\n",
+    "vector_A = np.array([30, 40])\n",
+    "\n",
+    "# Calculate the magnitude\n",
+    "magnitude_A = ...\n",
+    "\n",
+    "# Calculate the angle in radians\n",
+    "angle_A_rad = ...\n",
+    "\n",
+    "# Convert the angle to degrees\n",
+    "angle_A_deg = ...\n",
+    "\n",
+    "print(f\"Magnitude of Vector A: {magnitude_A} km\")\n",
+    "print(f\"Angle of Vector A: {angle_A_deg} degrees\")\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -186,7 +238,9 @@
    "id": "64165324-a2cc-407d-97ed-7ff941710609",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# your code goes here"
+   ]
   }
  ],
  "metadata": {
