--- a/VectorVoyage.ipynb
+++ b/VectorVoyage.ipynb
@@ -373,6 +373,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28dfd2ef-0c09-4725-b7d9-21c738feabaa",
+   "metadata": {},
+   "source": [
+    "### Optional: Visualizing the Relative Position of the Ships 🌐\n",
+    "\n",
+    "This section is optional and is intended for those who want to visually explore the scenario described in the exercise. Here, we'll plot the positions of Ship A and Ship B relative to a reference point (the lighthouse) and visualize the vector that represents the position of Ship B relative to Ship A.\n",
+    "\n",
+    "By plotting these vectors, you’ll gain a clearer understanding of how vector subtraction works and how it can be used to determine relative positions in a real-world context. This visualization is not required for the exercise but can be a helpful way to reinforce the concepts you’ve learned.\n",
+    "\n",
+    "If you're interested, you can run the following Python code to generate the plot.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "0909e98b-3929-4fac-9acf-3d64521f5c2c",
