--- a/VectorVoyage.ipynb
+++ b/VectorVoyage.ipynb
@@ -427,8 +427,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Given vectors for the ships' positions relative to the lighthouse\n",
-    "v_A = np.array([60, -20])  # Ship A: 40 km east, 20 km south\n",
-    "v_B = np.array([-10, 30])  # Ship B: 10 km west, 30 km north\n",
+    "v_A = np.array([40, -20])  # Ship A: 40 km east, 20 km south <<FEEL FREE TO CHANGE THESE VALUES>>\n",
+    "v_B = np.array([-10, 30])  # Ship B: 10 km west, 30 km north <<FEEL FREE TO CHANGE THESE VALUES>>\n",
     "\n",
     "# Calculate the position of Ship B relative to Ship A\n",
     "v_BA = v_B - v_A\n",
@@ -579,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
