added arithmatic operations with scalers

--- a/ScalarSanctuary.ipynb
+++ b/ScalarSanctuary.ipynb
@@ -37,39 +37,128 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f11d01c5-cb2c-40d0-9b32-517891d5a925",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "6e7894ed-1110-4964-bb5d-fc3521c1d200",
+   "id": "bf392c0c-a0a3-4c6b-af63-24bd9f689cea",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "482c4633-274e-424d-b155-1e8765cef542",
-   "metadata": {},
-   "outputs": [],
    "source": [
+    "### Python Representation of Scalars\n",
+    "\n",
+    "In Python, scalars can be represented using simple variables. Let's explore some examples:\n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "aed137c5-899c-441e-a343-1bcbd56f32e6",
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "47e3d97a-02f6-47e0-b1fd-2823750d5d2a",
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Height: 1.75 meters\n",
+      "Temperature: 298.15 Kelvin\n",
+      "Pressure: 101325 Pascals\n",
+      "Volume: 0.05 cubic meters\n",
+      "Time: 60 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example scalars\n",
+    "height = 1.75  # in meters\n",
+    "temperature = 298.15  # in Kelvin\n",
+    "pressure = 101325  # in Pascals\n",
+    "volume = 0.05  # in cubic meters\n",
+    "time = 60  # in seconds\n",
+    "\n",
+    "print(f\"Height: {height} meters\")\n",
+    "print(f\"Temperature: {temperature} Kelvin\")\n",
+    "print(f\"Pressure: {pressure} Pascals\")\n",
+    "print(f\"Volume: {volume} cubic meters\")\n",
+    "print(f\"Time: {time} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58b260ff-360f-47e4-a9fd-3691b1c72fb6",
+   "metadata": {},
+   "source": [
+    "### Arithmetic Operations with Scalars\n",
+    "Scalars can be manipulated through basic arithmetic operations. Let's learn how to do this with Python.\n",
+    "#### Adding and Subtracting Scalars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "6ae48e7a-54e6-464c-9976-ff6cdf06cf84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Height: 3.55 meters\n",
+      "Temperature Difference: 25.0 Kelvin\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Adding two scalars\n",
+    "height_1 = 1.75\n",
+    "height_2 = 1.80\n",
+    "total_height = height_1 + height_2\n",
+    "print(f\"Total Height: {total_height} meters\")\n",
+    "\n",
+    "# Subtracting two scalars\n",
+    "temperature_1 = 298.15\n",
+    "temperature_2 = 273.15\n",
+    "temperature_difference = temperature_1 - temperature_2\n",
+    "print(f\"Temperature Difference: {temperature_difference} Kelvin\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "043aef5f-bfbc-4dce-95bd-6d3b7858a9a4",
+   "metadata": {},
+   "source": [
+    "#### Multiplying and Dividing Scalars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "82401252-9c7e-4028-b1c9-c782a36d682c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doubled Pressure: 202650 Pascals\n",
+      "Halved Volume: 0.025 cubic meters\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multiplying a scalar by a number\n",
+    "pressure = 101325  # in Pascals\n",
+    "factor = 2\n",
+    "doubled_pressure = pressure * factor\n",
+    "print(f\"Doubled Pressure: {doubled_pressure} Pascals\")\n",
+    "\n",
+    "# Dividing a scalar by a number\n",
+    "volume = 0.05  # in cubic meters\n",
+    "halved_volume = volume / 2\n",
+    "print(f\"Halved Volume: {halved_volume} cubic meters\")\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa5736ea-d517-40ec-92a7-4b3f524f1573",
+   "id": "7da88a5d-1e5a-45b8-bb84-41b5456fcc3d",
    "metadata": {},
    "outputs": [],
    "source": []
