added an exersize for unit convetion

--- a/ScalarSanctuary.ipynb
+++ b/ScalarSanctuary.ipynb
@@ -176,9 +176,9 @@
     "\n",
     "Therefore, to convert 250 cm to meters:\n",
     "\n",
-    "\\[\n",
+    "$\n",
     "250 \\, \\text{cm} \\times \\frac{1 \\, \\text{m}}{100 \\, \\text{cm}} = 2.5 \\, \\text{m}\n",
-    "\\]\n",
+    "$\n",
     "\n",
     "#### Common Scalar Quantities and Their Units\n",
     "\n",
@@ -193,9 +193,9 @@
     "\n",
     "Consider you have a distance of 5 kilometers and you want to convert it to meters:\n",
     "\n",
-    "\\[\n",
+    "$\n",
     "5 \\, \\text{km} \\times \\frac{1000 \\, \\text{m}}{1 \\, \\text{km}} = 5000 \\, \\text{m}\n",
-    "\\]\n",
+    "$\n",
     "\n",
     "Similarly, you can convert meters to centimeters by multiplying by 100 (since 1 meter = 100 centimeters).\n",
     "\n",
@@ -234,9 +234,192 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e9dfc70-c158-462d-a8fc-9c3438c552ac",
+   "metadata": {},
+   "source": [
+    "### Introduction to Functions in Python\n",
+    "\n",
+    "Before we dive into more advanced unit conversions, let's learn how to create functions in Python. A function is a reusable block of code that performs a specific task. We'll start by creating functions to convert between kilometers (km) and meters (m).\n",
+    "\n",
+    "#### Example: Converting Kilometers to Meters\n",
+    "\n",
+    "We know that:\n",
+    "\n",
+    "$\n",
+    "1 \\, \\text{km} = 1000 \\, \\text{m}\n",
+    "$\n",
+    "\n",
+    "Let's write a Python function that converts kilometers to meters:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b79ea83c-160f-408a-a3d6-8ad2e13a3fdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def km_to_m(kilometers):\n",
+    "    \"\"\"Convert kilometers to meters.\"\"\"\n",
+    "    meters = kilometers * 1000\n",
+    "    return meters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "98479b24-83ff-4274-a342-e04c36b08463",
+   "metadata": {},
+   "source": [
+    "You can use this function like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f3260817-4b34-4622-8f41-b37a0c18f00f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 km is equivalent to 5000 meters.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert 5 kilometers to meters\n",
+    "distance_km = 5\n",
+    "# let's call the function to covert Km to m:\n",
+    "distance_m = km_to_m(distance_km)\n",
+    "\n",
+    "print(f\"{distance_km} km is equivalent to {distance_m} meters.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc85fe1f-dc20-4b7d-8c02-a1f095b50366",
+   "metadata": {},
+   "source": [
+    "Example: Converting Meters to Kilometers\n",
+    "Now, let's create the inverse function to convert meters back to kilometers:\n",
+    "\n",
+    "$\n",
+    "1 \\, \\text{m} = 0.0001 \\, \\text{m}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ea7d7e16-3f39-4dbd-836c-369fced05798",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def m_to_km(meters):\n",
+    "    \"\"\"Convert meters to kilometers.\"\"\"\n",
+    "    kilometers = meters / 1000\n",
+    "    return kilometers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "aca973ed-0e9b-49f8-bc52-0ddf6d871a1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5000 meters is equivalent to 5.0 kilometers.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert 5000 meters to kilometers\n",
+    "distance_m = 5000\n",
+    "distance_km = m_to_km(distance_m)\n",
+    "print(f\"{distance_m} meters is equivalent to {distance_km} kilometers.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36dcafe8-d5fc-47d8-aa4f-24bcec6ebd3f",
+   "metadata": {},
+   "source": [
+    "### Exercise: Advanced Unit Conversion Challenge\n",
+    "\n",
+    "Now that you've practiced some basic unit conversions, it's time to tackle a more complex one: converting temperatures from Celsius (°C) to Fahrenheit (°F).\n",
+    "\n",
+    "#### Task:\n",
+    "\n",
+    "1. **Research:** Use online resources to find the formula for converting temperatures from Celsius to Fahrenheit. You may also want to review how to reverse this conversion (from Fahrenheit to Celsius).\n",
+    "\n",
+    "2. **Convert the following temperatures from Celsius to Fahrenheit:**\n",
+    "    - **25°C**\n",
+    "    - **-10°C**\n",
+    "    - **37°C** (approximately human body temperature)\n",
+    "    - **100°C** (the boiling point of water)\n",
+    "\n",
+    "3. **Write a Python function** that takes a temperature in Celsius and returns the equivalent temperature in Fahrenheit.\n",
+    "\n",
+    "4. **Test your function** by converting the temperatures listed above.\n",
+    "\n",
+    "#### Bonus Challenge:\n",
+    "\n",
+    "- Write a reverse function that converts Fahrenheit to Celsius.\n",
+    "- Test your reverse function by converting the results from your first function back to Celsius.\n",
+    "\n",
+    "#### Instructions:\n",
+    "\n",
+    "- Make sure your function handles both positive and negative temperatures.\n",
+    "- Print your results in a clear and readable format.\n",
+    "- If you’re unsure about the conversion formula, consult reliable educational websites, physics textbooks, or other credible sources.\n",
+    "\n",
+    "By completing this exercise, you'll not only learn about temperature conversions but also practice researching scientific formulas and implementing them in code. This is a valuable skill in both academic and professional settings.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2bde8c37-6717-4684-a298-3dabc6a7cc93",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Task 1: Research and find the formula for converting Celsius to Fahrenheit\n",
+    "# Hint: The formula is of the form: F = (C * 9/5) + 32\n",
+    "\n",
+    "def celsius_to_fahrenheit(celsius):\n",
+    "    \"\"\"Convert Celsius to Fahrenheit.\"\"\"\n",
+    "    # TODO: Implement the conversion formula here\n",
+    "    fahrenheit = None  # Replace this with the correct calculation\n",
+    "    return fahrenheit\n",
+    "\n",
+    "# Task 2: Research and find the formula for converting Fahrenheit to Celsius\n",
+    "# Hint: The formula is of the form: C = (F - 32) * 5/9\n",
+    "\n",
+    "def fahrenheit_to_celsius(fahrenheit):\n",
+    "    \"\"\"Convert Fahrenheit to Celsius.\"\"\"\n",
+    "    # TODO: Implement the conversion formula here\n",
+    "    celsius = None  # Replace this with the correct calculation\n",
+    "    return celsius"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09396809-6e1a-4034-a1b0-8d58900de1bc",
+   "id": "700ed8bb-9b73-42d9-a222-831cd0a271b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f42ad7c-94b8-4013-b54e-138566d4b42c",
    "metadata": {},
    "outputs": [],
    "source": []
